Switched Core Executor to a virtual thread-based executor